add faq and ticket info
add icon
change page language
minor changes

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 
   }
   .mailFont{
-          font-size:11px;
+          font-size:0.7rem;
       }
   html, body{
       margin: 0;
@@ -335,7 +335,7 @@
       }
       nav{
           width: 100%;
-          background: #5e52ff1c;
+          background: #10069475;
           color: white;
           position: fixed;
           display: block;
