--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@
 
   }
   .mailFont{
-          font-size:0.7rem;
+          font-size:0.8em;
       }
   html, body{
       margin: 0;
@@ -89,11 +89,11 @@
       width: 100%;
   }
   .header-detail-text{
-      padding: 20px 20px;
-      font-size: 18px;
+      padding: 10px 10px;
+      /* font-size: 18px; */
       letter-spacing: 1px;
-      line-height: 1.2em;
-      margin-bottom: 40px;
+      line-height: 1em;
+      margin-bottom: 20px;
   }
   .header-image{
       display: none;
@@ -364,8 +364,8 @@
       }
       .menu-container{
           height: 80px;
-          margin-left: 50%;
-          width: 50%;
+          margin-left: 20%;
+          width: 75%;
           display: flex;
           justify-content: space-around;
           align-items: center;
@@ -389,6 +389,7 @@
       }
       nav .logo-container{
           height: 68px;
+          margin-left: 2%;
           position: absolute;
           top: 6px;
           left: 16px;
