--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,7 @@
       text-align: center;
   }
   .program-item .image img{
+      padding:10%;
       width: 100%;
       border-radius: 100%;
       box-sizing: border-box;
