--- a/styles.css
+++ b/styles.css
@@ -164,7 +164,7 @@
       text-align: center;
   }
   .program-item .image img{
-      padding:10%;
+     /* padding:10%;*/
       width: 100%;
       border-radius: 100%;
       box-sizing: border-box;
