--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,7 @@
   .program-item{
       display: flex;
       align-items: center;
-      margin: 12px 0;
+      margin: 0;
       border-top: 0.5px solid #fff;
       padding:3%;
   }
