2020 güncellemeleri için hazır hale getirildi

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,118 @@
+header.main {
+    padding: 30px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #10069475;
+    /*background-color: rgba(18, 41, 93, 0.9);*/
+    z-index: 9;
+    position: fixed;
+    width: 100%;
+    height: 85px;
+    font-weight: bold;
+    font-size: 1.1em;
+    box-shadow: 0px 0px 3px 1px #183661;
+  
+  }
+  
+  header .containeer {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /*background-color: #10069475;*/
+  }
+  
+  #hero a.logo {
+    display: flex;
+    align-items: center;
+  }
+  
+  header a.logo img {
+    height: 68px;
+  }
+  
+  .sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    background-color: #111111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  .sidenav-open {
+    width: 250px;
+  }
+  
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    /* text-transform: uppercase; */
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidenav a:hover, .sidenav a.active {
+    color: #ffffff;
+  }
+  
+  .nav-toggle {
+    font-size: 30px;
+    cursor: pointer;
+  }
+  
+  .sidenav .closebtn {
+    position: absolute;
+    top: 25px;
+    right: 25px;
+    font-size: 3rem;
+    margin-left: 50px;
+  }
+  
+  @media screen and (min-width: 960px) {
+    .sidenav {
+      width: auto;
+      position: static;
+      height: 46px;
+      overflow: hidden;
+      background-color: transparent;
+      transition: 0.5s;
+      padding-top: 0;
+    }
+  
+    .sidenav a {
+      display: inline-block;
+      color: #ccc;
+      transition: 0.3s color;
+    }
+  
+    .sidenav a:hover, .sidenav a.active {
+      color: #fff;
+    }
+  
+    .sidenav .closebtn {
+      display: none;
+    }
+  
+    .nav-toggle {
+      display: none;
+    }
+  }
+  
+  @media screen and (min-width: 1350px) {
+    header.main .container {
+        width: 80%;
+        margin: 0 auto;
+    }
+  }
+  
+
 .double{
     width: 30%;
 }
@@ -39,7 +154,7 @@
       padding: 0;
   }
   section{
-      background-image: linear-gradient(45deg, rgb(0, 0, 50) 70%, #000000 100%);
+      background-image: linear-gradient(90deg, rgb(0, 0, 50) 70%, #000000 100%);
       color: white;
       padding: 10px;
   }
@@ -51,17 +166,18 @@
       clear: both;
       display: table;
   }
-  nav{
+  /* nav{
       display: none;
-  }
+  } */
 
-  /* .btn{
-      background-color: rgba(0, 0, 0, 0.5);
+  .btn{
+      /*background-color: rgba(0, 0, 0, 0.5);
       border: 2px solid white;
       display: inline;
       padding: 12px 24px;
-      
-  } */
+      */
+      white-space: normal;
+  }
   .btn a{
       text-decoration: none;
       color: white;
@@ -79,7 +195,7 @@
   section p{
       line-height: 1.2em;
   }
-  header{
+  .header{
       width: 100%;
       height: 100vh;
       height: calc(var(--vh, 1vh) * 100);
@@ -89,6 +205,9 @@
   .header-content{
       position: relative;
       text-align: center;
+  }
+  .header-container{
+      padding-top: 150px;
   }
   .header-logo{
       width: 60%;
@@ -108,7 +227,7 @@
       display: none;
   }
   .hero-title{
-      display: none;
+      display: block;
   }
   .why-container{
 
@@ -425,6 +544,7 @@
       .programs-container{
           width: 100%;
           display: flex;
+          flex-direction: column;
           align-items: start;
       }
       .program-container{
