Ana sayfa ve sponsorlar sayfası düzeltme

--- a/styles.css
+++ b/styles.css
@@ -207,7 +207,7 @@ header.main {
       text-align: center;
   }
   .header-container{
-      padding-top: 150px;
+      padding-top: 15vh;
   }
   .header-logo{
       width: 60%;
