--- a/styles.css
+++ b/styles.css
@@ -235,13 +235,17 @@ header.main {
   .why-container h3{
       text-decoration: underline;
   }
+  .why-container p{
+    font-size: 1.2em ;
+}
   .why-list{
       list-style: none;
       padding-left: 10px;
-      line-height: 1.4em;
+      line-height: 1.2em;
   }
   .why-list li{
       padding: 4px 0;
+      font-size: 1.2em;
   }
   .why-list li:before{
       font-size: 1.4em;
