team ve buton rengi
datacamp organizasyon ekibi ve iletişim bilgileri günclellendi. butonların rengi navbar ile aynı yapıldı

--- a/styles.css
+++ b/styles.css
@@ -171,6 +171,7 @@ header.main {
   } */
 
   .btn{
+      background-color: #100694;
       /*background-color: rgba(0, 0, 0, 0.5);
       border: 2px solid white;
       display: inline;
