--- a/styles.css
+++ b/styles.css
@@ -470,6 +470,15 @@ header.main {
       height: 400px;
       width: 100%;
   }
+.page-container{
+  height: 100vh;
+  box-sizing: border-box;
+  padding-top: 110px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
   .footer-container{
       text-align: center;
   }
@@ -865,6 +874,7 @@ header.main {
     border: 2px solid #1E1E45;
     
   }
+
   
   .about-column {
     flex-shrink: 1;
@@ -921,4 +931,107 @@ header.main {
 }
 .accordion-button{
   font-weight: bold !important;
+}
+@media screen and (min-width: 10px){
+  .sponsorspage{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    flex-basis: 100%;
+  
+  }
+  .sponsorscolumns{
+    display:flex;
+    flex-direction: row;
+    border-width: 0px 0px 2px 0px;
+    border-color:#D9D9D9;
+    border-style: solid;
+    flex-basis: 100%;
+    text-align: center;
+  }
+  .sponsorscolumns:last-child{
+    border-width: 0px;
+  }
+  .sponsorcoltitle{
+    border-width: 0px 2px 0px 0px;
+    border-color:#D9D9D9;
+    border-style: solid;
+    padding-left: 8px;
+    font-weight: 400;
+    font-size:14px;
+    min-width: 100px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+  }
+ 
+  .sponsorcolimgs{
+    display: flex;
+    gap: 16px;
+    flex-direction: row;
+    padding:11px;
+    flex-wrap: wrap;
+    
+  }
+  .sponsorcolimgs img{
+    max-width: 40px;
+    /* max-width: 100%; */
+    min-width: 50px;
+    
+  }
+  #kuculecek{
+    max-width: 90%;
+  }
+}
+@media screen and (min-width: 645px){
+.sponsorspage{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  flex-basis: 100%;
+
+}
+.sponsorscolumns{
+  display:flex;
+  flex-direction: column;
+  border-width: 0px 2px 0px 0px;
+  border-color:#D9D9D9;
+  border-style: solid;
+  flex-basis: 100%;
+  text-align: center;
+}
+.sponsorscolumns:last-child{
+  border-width: 0px;
+}
+.sponsorcoltitle{
+  border-width: 0px 0px 2px 0px;
+  border-color:#D9D9D9;
+  border-style: solid;
+  padding-top: 20px;
+  font-weight: 400;
+  font-size:2.4vw;
+  display: flex;
+  justify-content: center;
+  
+}
+.sponsorimgcontainer{
+  justify-content: center;
+  
+}
+.sponsorcolimgs{
+  display: flex;
+  gap: 36px;
+  flex-direction: column;
+  padding-top:18px;
+  
+
+}
+.sponsorcolimgs img{
+  max-width: 100%;
+}
+#kuculecek{
+  max-width: 90%;
+}
 }
