--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ header.main {
       margin: 0;
       padding: 0;
   }
-  section{
+  section , footer{
       background-image: linear-gradient(90deg, rgb(0, 0, 50) 70%, #000000 100%);
       color: white;
       padding: 10px;
@@ -501,7 +501,7 @@ header.main {
           display: flex;
           justify-content: space-around;
           align-items: center;
-          padding-top: 68px;
+          padding-top: 90px;
       }
       .header-container .header-text{
           width: 60%;
