--- a/styles.css
+++ b/styles.css
@@ -1045,7 +1045,7 @@ header.main {
     font-family: 'Inter', system-ui, -apple-system, 'Helvetica Neue', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', sans-serif ;
   }
 
-  .program-container {
+  .program-containerrr {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1054,7 +1054,7 @@ header.main {
     margin-right:auto;
   }
 
-  .program-container, .section-program-head {
+  .program-containerrr, .section-program-head {
 
     background-image: none;
 
@@ -1136,7 +1136,7 @@ header.main {
 
   /* Section Program */
 
-  .program-container {
+  .program-containerrr {
     max-width: 1208px;
     width: auto;
   }
@@ -1398,7 +1398,7 @@ gap: 8px;
     font-family: 'Inter', system-ui, -apple-system, 'Helvetica Neue', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', sans-serif ;
   }
 
-  .program-container {
+  .program-containerrr {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1406,7 +1406,7 @@ gap: 8px;
     margin-right:auto;
   }
 
-  .program-container, .section-program-head {
+  .program-containerrr, .section-program-head {
 
     background-image: none;
 
@@ -1488,7 +1488,7 @@ gap: 8px;
 
   /* Section Program */
 
-  .program-container {
+  .program-containerrr {
     max-width: 1208px;
     width: auto;
   }
