--- a/styles.css
+++ b/styles.css
@@ -340,6 +340,7 @@ header.main {
     display: flex;
     flex-direction: column;
     height: 100%;
+    
   }
   .partners-amblems-container{
     width: 100%;
@@ -347,12 +348,14 @@ header.main {
     flex-basis: 100%;
     display: flex;
     align-items: center;
+    
   }
   .partners-amblems a{
   }
   .partners-amblems-container img {
     min-width: 64px;
     margin-bottom: 20px;
+    margin-left: 20px;
   }
   @media screen and (min-width: 1px){
   .header-text{
@@ -502,7 +505,7 @@ header.main {
           display: flex;
           justify-content: space-around;
           align-items: center;
-          padding-top: 90px;
+          padding-top: 0px;
       }
       .header-container .header-text{
           width: 60%;
