--- a/styles.css
+++ b/styles.css
@@ -1057,7 +1057,8 @@ section {
     .sponsorspage {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        /* justify-content: space-between; Sponsorlar eklenince değiştirilecek. */
+        justify-content: center;
         width: 100%;
         flex-basis: 100%;
 
