--- a/styles.css
+++ b/styles.css
@@ -1116,7 +1116,8 @@ section {
     .sponsorspage {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        /* justify-content: space-between; Sponsorlar açıklandığında değiştirilecek. */
+        justify-content: center;
         width: 100%;
         flex-basis: 100%;
 
